@@ -7,8 +7,8 @@
 // $Id$
 
 #include "stdafx.h"
-#include "AppSerialize.h"
 #include "SyntaxColors.h"
+#include "OptionsMgr.h"
 
 static const TCHAR DefColorsPath[] =_T("DefaultSyntaxColors");
 
@@ -16,6 +16,7 @@ static const TCHAR DefColorsPath[] =_T("DefaultSyntaxColors");
  * @brief Constructor, initialise with default colors.
  */
 SyntaxColors::SyntaxColors()
+: m_pOptions(NULL)
 {
 	m_colors.SetSize(COLORINDEX_COUNT);
 	m_bolds.SetSize(COLORINDEX_COUNT);
@@ -26,6 +27,7 @@ SyntaxColors::SyntaxColors()
  * @brief Copy constructor.
  */
 SyntaxColors::SyntaxColors(SyntaxColors *pColors)
+: m_pOptions(NULL)
 {
 	m_colors.SetSize(COLORINDEX_COUNT);
 	m_bolds.SetSize(COLORINDEX_COUNT);
@@ -145,38 +147,83 @@ void SyntaxColors::SetBold(UINT index, BOOL bold)
 }
 
 /**
- * @brief Save color values to registry.
+ * @brief Initialize color table.
+ * @param [in] pOptionsMgr pointer to OptionsMgr used as storage.
  */
-void SyntaxColors::SaveToRegistry()
+void SyntaxColors::Initialize(CRegOptions *pOptionsMgr)
 {
+	ASSERT(pOptionsMgr);
 	CString valuename;
-	AppSerialize serializer(AppSerialize::Save, DefColorsPath);
+
+	m_pOptions = pOptionsMgr;
 
 	int count = COLORINDEX_COUNT;
-	serializer.SerializeInt(_T("Values"), count);
+	valuename = DefColorsPath + '/';
+	valuename += _T("Values");
+	m_pOptions->InitOption(valuename, count);
 
 	for (unsigned int i = COLORINDEX_NONE; i < COLORINDEX_LAST; i++)
 	{
-		valuename.Format(_T("Color%02u"), i);
-		int color = m_colors.GetAt(i);
-		serializer.SerializeInt(valuename, color);
-		valuename.Format(_T("Bold%02u"), i);
-		BOOL bold = m_bolds.GetAt(i);
-		serializer.SerializeInt(valuename, bold);
+		// Since we want to initialize with default colors (already
+		// set to array, we must first call OptionsMrg->InitOption()
+		// with default value. And since InitOption() reads stored value
+		// from storage we must set that value to array we use.
+		int color = 0;
+		COLORREF ref;
+		valuename.Format(_T("%s/Color%02u"), DefColorsPath, i);
+		color = m_colors.GetAt(i);
+		m_pOptions->InitOption(valuename, color);
+		color = m_pOptions->GetInt(valuename);
+		ref = color;
+		m_colors.SetAt(i, ref);
+	
+		int nBold = 0;
+		BOOL bBold = FALSE;
+		valuename.Format(_T("%s/Bold%02u"), DefColorsPath, i);
+		bBold = m_bolds.GetAt(i);
+		m_pOptions->InitOption(valuename, (int) bBold);
+		nBold = m_pOptions->GetInt(valuename);
+		bBold = nBold ? TRUE : FALSE;
+		m_bolds.SetAt(i, bBold);
 	}
 
 }
 
 /**
- * @brief Read color values from registry.
+ * @brief Save color values to storage
+ */
+void SyntaxColors::SaveToRegistry()
+{
+	ASSERT(m_pOptions);
+	CString valuename;
+
+	int count = COLORINDEX_COUNT;
+	valuename = DefColorsPath + '/';
+	valuename += _T("Values");
+	m_pOptions->SetInt(valuename, count);
+
+	for (unsigned int i = COLORINDEX_NONE; i < COLORINDEX_LAST; i++)
+	{
+		valuename.Format(_T("%s/Color%02u"), DefColorsPath, i);
+		int color = m_colors.GetAt(i);
+		m_pOptions->SetInt(valuename, color);
+		valuename.Format(_T("%s/Bold%02u"), DefColorsPath, i);
+		BOOL bold = m_bolds.GetAt(i);
+		m_pOptions->SetInt(valuename, bold);
+	}
+}
+
+/**
+ * @brief Read color values from storage.
  */
 void SyntaxColors::ReadFromRegistry()
 {
+	ASSERT(m_pOptions);
 	CString valuename;
-	AppSerialize serializer(AppSerialize::Load, DefColorsPath);
 
-	int count = 0;
-	serializer.SerializeInt(_T("Values"), count);
+	valuename = DefColorsPath + '/';
+	valuename += _T("Values");
+	int count = m_pOptions->GetInt(valuename);
 
 	// Color count matches we propably have correct set saved
 	// otherwise fallback to default colors
@@ -186,15 +233,15 @@ void SyntaxColors::ReadFromRegistry()
 		{
 			int color = 0;
 			COLORREF ref;
-			valuename.Format(_T("Color%02u"), i);
-			serializer.SerializeInt(valuename, color);
+			valuename.Format(_T("%s/Color%02u"), DefColorsPath, i);
+			color = m_pOptions->GetInt(valuename);
 			ref = color;
 			m_colors.SetAt(i, ref);
 
 			int nBold = 0;
 			BOOL bBold = FALSE;
-			valuename.Format(_T("Bold%02u"), i);
-			serializer.SerializeInt(valuename, nBold);
+			valuename.Format(_T("%s/Bold%02u"), DefColorsPath, i);
+			nBold = m_pOptions->GetInt(valuename);
 			bBold = nBold ? TRUE : FALSE;
 			m_bolds.SetAt(i, bBold);
 		}
